# github_issue_triage

./: .env.example  .gitignore  DEVLOG.md  README.md  pyproject.toml
approaches/01_prompt_chain/: chain.py  run.py
data/golden/: 283381.json  297827.json  307977.json  309937.json  312509.json  314060.json  319853.json  321352.json  322756.json  323401.json  323423.json  323793.json  323884.json  323915.json  324033.json  324059.json  324066.json
data/issues/: 283381.json  297827.json  307977.json  309937.json  312509.json  314060.json  319853.json  321352.json  322756.json  323401.json  323423.json  323793.json  323884.json  323915.json  324033.json  324059.json  324066.json
shared/: github_client.py  prompts.py  schema.py
